@@ -24,8 +24,9 @@ SSL_ENABLED =
 
 USER_WEB_DIR = /var/www/virtual
 
+# Do not forget to run the imscp-setup script
+# after changing these parameters
 SYSTEM_USER_PREFIX = vu
-
 SYSTEM_USER_MIN_UID = 2000
 
 #
